Fixed overlapping link in checkout button

--- a/src/index.css
+++ b/src/index.css
@@ -229,26 +229,25 @@ nav{
     width: 40rem;
     line-height: 1.4;
     margin-top: 15px;
+    margin-bottom: 40px;
 }
 
 .sec2 button{
     width: 210px;
     height: 63px;
-    background-image: url(images/fillup-liquid.png);
+    background: transparent;
     border-style: solid;
     border-width: 3px;
     border-radius: 30px;
     border-color: #3a2c2c;
     font-family: 'Lalezar', 'serif';
     font-size: 26px;
-    margin-top: 40px;
     cursor: pointer;
 }
 
 .sec2 button:hover{
     background-color: #3a2c2c;
     color: white;
-    position: relative;
     top: 2px;
 }
 
